Possibile fix a overflow navbar mobile

--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -60,6 +60,7 @@ body {
 
 .mobile-nav {
   padding-right: 2em;
+  overflow-x: hidden;
 }
 
 .mobile-nav-links {
