--- a/src/styles/scss/_mobileNavbar.scss
+++ b/src/styles/scss/_mobileNavbar.scss
@@ -1,5 +1,6 @@
 .mobile-nav {
   padding-right: 2em;
+  overflow-x: hidden;
 }
 
 .mobile-nav-links {
